--- a/package.json
+++ b/package.json
@@ -8,7 +8,23 @@
     "preview": "astro preview",
     "astro": "astro"
   },
+  "optionalDependencies": {
+    "@rollup/rollup-win32-x64-msvc": "^4.52.4"
+  },
   "dependencies": {
-    "astro": "^5.4.2"
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/mdx": "^4.3.6",
+    "@astrojs/rss": "^4.0.12",
+    "@astrojs/sitemap": "^3.6.0",
+    "@astrojs/tailwind": "^6.0.2",
+    "@tailwindcss/typography": "^0.5.19",
+    "astro": "^5.14.1",
+    "autoprefixer": "^10.4.21",
+    "gray-matter": "^4.0.3",
+    "js-yaml": "^4.1.0",
+    "limax": "^4.2.1",
+    "lodash.merge": "^4.6.2",
+    "tailwindcss": "^3.4.18",
+    "typescript": "^5.9.3"
   }
 }
