--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
+    "start": "serve dist -l 3000 -c serve.json",
     "astro": "astro"
   },
   "optionalDependencies": {
@@ -26,5 +27,8 @@
     "lodash.merge": "^4.6.2",
     "tailwindcss": "^3.4.18",
     "typescript": "^5.9.3"
+  },
+  "devDependencies": {
+    "serve": "^14.2.5"
   }
 }
