fix: CORRECAO DE EMERGENCIA - Site fora do ar (502 Bad Gateway)
- Remove railway.json que estava causando erro 502
- Corrige comando start para usar \ do Railway
- Restaura funcionalidade basica do site
- Mantem _redirects para headers XML
- Prioridade: RESTAURAR SITE IMEDIATAMENTE

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "start": "serve dist -l 3000 -c serve.json",
+    "start": "serve dist -l $PORT -c serve.json",
     "astro": "astro"
   },
   "optionalDependencies": {
